--- a/.github/workflows/Auto-deployment.yaml
+++ b/.github/workflows/Auto-deployment.yaml
@@ -18,15 +18,15 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
 
     - name: Install NodeJS
-      uses: actions/setup-node@v2-beta
+      uses: actions/setup-node@v3
       with:
-        node-version: 12
+        node-version: 16
       
     - name: Install Surge
       run: npm install -g surge
     
     - name: Run Surge
-      run: surge ./ hammad.surge.sh --token ${{secrets.surge_token}}
+      run: surge ./ https://hammad.surge.sh/ --token ${{secrets.surge_token}}
