--- a/.github/workflows/Auto-deployment.yaml
+++ b/.github/workflows/Auto-deployment.yaml
@@ -29,4 +29,4 @@ jobs:
       run: npm install -g surge
     
     - name: Run Surge
-      run: surge ./ https://f2020266337.surge.sh/ --token ${{secrets.surge_token}}
+      run: surge ./ https://f2020266337-webass1.surge.sh/ --token ${{secrets.surge_token}}
